# MRS_Simulation

mrs_bt_node/: CMakeLists.txt  package.xml
mrs_bt_node/include/mrs_bt_node/auctioneer/: allocation_action.hpp  bids_received_condition.hpp  send_bid_request_action.hpp  wait_for_bids_action.hpp
mrs_bt_node/include/mrs_bt_node/participant/: await_request_action.hpp  execution_action.hpp  form_bid_action.hpp  remain_idle_action.hpp  request_received_condition.hpp  selected_condition.hpp
mrs_bt_node/launch/: bt_launch.launch.py
mrs_bt_node/src/: main.cpp
mrs_bt_node/src/auctioneer/: allocation_action.cpp  bids_received_condition.cpp  send_bid_request_action.cpp  wait_for_bids_action.cpp
mrs_bt_node/src/participant/: await_request_action.cpp  execution_action.cpp  form_bid_action.cpp  remain_idle_action.cpp  request_received_condition.cpp  selected_condition.cpp
mrs_bt_node/trees/: auctioneer_tree.xml  participant_tree.xml
mrs_robot_launcher/: CMakeLists.txt  package.xml
mrs_robot_launcher/launch/: robot_launcher.launch.py
mrs_robot_launcher/urdf/X3/: robot.urdf.xacro  robot_body.xacro  robot_gazebo_properties.xacro  robot_peripherals.xacro
mrs_robot_launcher/worlds/: thermal_testing.world
mrs_supervisory_node/: CMakeLists.txt  package.xml
