<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrs_bt_node</name>
  <version>1.0.0</version>
  <description>Behaviour tree driven auction implementation in ROS2</description>
  <maintainer email="mtidd2@unb.ca">matthew</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp_v3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
